--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,6 +7,14 @@
     font: var(--font-m);
     background: var(--bg-color);
     color: var(--primary-color);
-
     min-height: 100vh;
+}
+
+.content-page {
+    display: flex;
+}
+
+.page-wrapper {
+    flex-grow: 1;
+    padding: 20px;
 }
