--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -1,6 +1,6 @@
 .button {
     cursor: pointer;
-    color: var(--primary-color)
+    color: var(--primary-color);
 }
 
 .clear {
@@ -8,4 +8,11 @@
     border: none;
     background: none;
     outline: none;
+}
+
+.outline {
+    padding: 10px 15px;
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
+    background: none;
 }
