--- a/src/shared/ui/Modal/ui/Modal.module.scss
+++ b/src/shared/ui/Modal/ui/Modal.module.scss
@@ -1,9 +1,6 @@
 .modal {
     position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    inset: 0;
     z-index: -1;
     opacity: 0;
 }
@@ -21,7 +18,6 @@
     padding: 20px;
     border-radius: 12px;
     background-color: var(--bg-color);
-
     transition: 0.3s transform;
     transform: scale(0.5);
     max-width: 60%;
