--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,9 +3,12 @@
 @import "themes/dark";
 @import "themes/normal";
 
-.app {
+body {
     font: var(--font-m);
     color: var(--primary-color);
+}
+
+.app {
     background: var(--bg-color);
     min-height: 100vh;
 }
