--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,8 @@
     --primary-color: #04ff04;
     --inverted-primary-color: #0232c2;
     --inverted-secondary-color: #0452ff;
+
+    /* skeleton */
+    --skeleton-color: #1515ad;
+    --skeleton-shadow: #2b2be8;
 }
