--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -8,6 +8,10 @@ body {
     color: var(--primary-color);
 }
 
+a {
+    text-decoration: none;
+}
+
 .app {
     background: var(--bg-color);
     min-height: 100vh;
@@ -15,4 +19,19 @@ body {
 
 .content-page {
     display: flex;
+}
+
+*::-webkit-scrollbar-track {
+    background: var(--card-bg);
+}
+
+*::-webkit-scrollbar {
+    width: 12px;
+    height: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--inverted-primary-color);
+    border-radius: 20px;
+    border: 2px solid var(--primary-color)
 }
