--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -7,6 +7,11 @@
     padding: 20px;
 }
 
+.appName {
+    width: var(--sidebar-width);
+    margin-left: 15px;
+}
+
 .links {
     margin-left: auto;
 }
