--- a/src/entities/Article/ui/ArticleDetail/ArticleDetails.module.scss
+++ b/src/entities/Article/ui/ArticleDetail/ArticleDetails.module.scss
@@ -2,33 +2,6 @@
     min-height: 100%;
 }
 
-.avatarWrapper {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-}
-
-.avatar {
+.avatar, .error {
     margin: 0 auto;
-}
-
-.articleInfo {
-    display: flex;
-    align-items: center;
-}
-
-.icon {
-    margin-right: 8px;
-}
-
-.title { 
-    margin-top: 20px;
-}
-
-.skeleton {
-    margin-top: 15px;
-}
-
-.block {
-    margin-top: 16px;
 }
