--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -12,6 +12,10 @@ a {
     text-decoration: none;
 }
 
+li {
+    list-style-type: none;
+}
+
 .app {
     background: var(--bg-color);
     min-height: 100vh;
