--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -3,6 +3,7 @@
     inset: 0;
     z-index: -1;
     opacity: 0;
+    pointer-events: none;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,7 +21,8 @@
 .opened {
     opacity: 1;
     z-index: var(--modal-z-index);
-
+    pointer-events: auto;
+    
     .content {
         transform: scale(1);
     }
