Фикс сторибука и референсы

--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -96,7 +96,7 @@
     .title {
         margin-top: 8px;
 
-        p {
+        h1,h2,h3 {
             width: 200px;
             white-space: nowrap;
             overflow: hidden;
