--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -18,4 +18,16 @@
 
     /* listbox */
     --listbox-bg: #0d0d6b;
+
+
+    // redesigned
+    --dark-bg-redesigned: #090F11;
+    --bg-redesigned: #0C1214;
+    --light-bg-redesigned: #151C1F;
+    --text-redesigned: #DBDBDB;
+    --hint-redesigned: #555;
+    --cancel-redesigned: #D95757;
+    --save-redesigned: #6CD98B;
+    --icon-redesigned: #74A2B2;
+    --accent-redesigned: #5ED3F3;
 }
