--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -18,4 +18,15 @@
 
     /* listbox */
     --listbox-bg: #d5d5d7;
+
+    // redesigned
+    --dark-bg-redesigned: #FFF;
+    --bg-redesigned: #EFF5F6;
+    --light-bg-redesigned: #E2EEF1;
+    --text-redesigned: #141C1F;
+    --hint-redesigned: #ADBCC0;
+    --cancel-redesigned: #F77;
+    --save-redesigned: #62DE85;
+    --icon-redesigned: #5ED3F3;
+    --accent-redesigned: #00C8FF;
 }
