--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -7,6 +7,10 @@
     padding: 20px;
 }
 
+.navbarRedesigned {
+    padding: 16px;
+}
+
 .appName {
     width: var(--sidebar-width);
     margin-left: 15px;
