--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -6,6 +6,17 @@
     transition: width 0.3s;
 }
 
+.sidebarRedesigned {
+    background: var(--light-bg-redesigned);
+    width: 220px;
+    height: 100%;
+    border-radius: 32px;
+}
+
+.appLogo {
+    padding-top: 20px;
+}
+
 .switchers {
     position: absolute;
     bottom: 20px;
