--- a/src/shared/ui/redesigned/Popups/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/redesigned/Popups/ui/ListBox/ListBox.module.scss
@@ -9,3 +9,7 @@
     border-radius: 12px;
     box-shadow: 4px 4px 8px var(--dark-bg-redesigned);
 }
+
+.selected { 
+    background: var(--light-bg-redesigned);
+}
