--- a/src/features/ArticleViewSelector/ui/ArticleViewSelector/ArticleViewSelector.module.scss
+++ b/src/features/ArticleViewSelector/ui/ArticleViewSelector/ArticleViewSelector.module.scss
@@ -1,3 +1,12 @@
-.notSelected {
-    fill: var(--secondary-color);
+.articleViewSelector {
+    .notSelected {
+        fill: var(--secondary-color);
+    }
+}
+
+
+.articleViewSelectorRedesigned {
+    .notSelected {
+        color: var(--light-bg-redesigned);
+    }
 }
