--- a/src/shared/ui/redesigned/Input/Input.module.scss
+++ b/src/shared/ui/redesigned/Input/Input.module.scss
@@ -1,54 +1,46 @@
 .input {
-    background: transparent;
     border: none;
     outline: none;
     width: 100%;
-    color: transparent;
-    text-shadow: 0 0 0 var(--primary-color);
-
-    &:focus {
-        outline: none;
+    color: var(--text-redesigned);
+    
+    &::placeholder {
+        color: var(--hint-redesigned);
     }
 
+    background: none;
 }
 
 .inputWrapper {
     display: flex;
+    align-items: center;
+    border-radius: 48px;
+    padding: 8px 16px;
+    border: 1px solid var(--icon-redesigned);
+    height: 38px;
+    width: 100%;
 }
 
-.placeholder {
-    margin-right: 5px;
+.focused {
+    border: 2px solid var(--accent-redesigned);
+    
+    .addonLeft svg, .addonRight svg {
+        color: var(--accent-redesigned);
+    }
 }
 
-.caretWrapper {
-    flex-grow: 1;
-    position: relative;
+.addonLeft, .addonRight {
+    display: flex;
 }
 
-.caret {
-    position: absolute;
-    height: 3px;
-    width: 9px;
-    background: var(--primary-color);
-    left: 0;
-    bottom: 0;
-    animation: blink 0.7s forwards infinite;
+.withAddonLeft{
+    padding-left: 8px;
+}
+
+.withAddonRight{
+    padding-right: 8px;
 }
 
 .readOnly {
     opacity: 0.7;
-}
-
-@keyframes blink {
-    0% {
-        opacity: 0;
-    }
-
-    50% {
-        opacity: 0.01;
-    }
-
-    100% {
-        opacity: 1;
-    }
 }
