--- a/src/shared/ui/redesigned/Text/Text.module.scss
+++ b/src/shared/ui/redesigned/Text/Text.module.scss
@@ -34,6 +34,12 @@
     text-align: center;
 }
 
+.bold {
+    .title, text {
+        font-weight: 700;
+    }
+}
+
 @each $text_size, $title_size in (s: m, m: l, l: xl) {
     .size_#{$text_size} {
         .text {
