--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -104,3 +104,14 @@
         }
     }
 }
+
+.articleListItemRedesigned {
+    &.LIST {
+        width: 100%;
+    }
+    
+    &.TILE {
+        width: 240px;
+        height: 350px;
+    }
+}
