--- a/src/shared/ui/redesigned/Stack/Flex/Flex.module.scss
+++ b/src/shared/ui/redesigned/Stack/Flex/Flex.module.scss
@@ -6,6 +6,14 @@
     width: 100%;
 }
 
+.wrap {
+    flex-wrap: wrap;
+}
+
+.nowrap {
+    flex-wrap: nowrap;
+}
+
 @each $className,
     $justifyValue in (justifyStart: start,
     justifyCenter: center,
