Редизайн скелетона плиточных статей и скролбара

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -29,8 +29,9 @@ li {
     display: flex;
 }
 
+
 *::-webkit-scrollbar-track {
-    background: var(--card-bg);
+    background: var(--light-bg-redesigned);
 }
 
 *::-webkit-scrollbar {
@@ -39,7 +40,22 @@ li {
 }
 
 *::-webkit-scrollbar-thumb {
+    background-color: var(--icon-redesigned);
+    border-radius: 20px;
+    border: 1px solid var(--accent-redesigned);
+}
+
+.app *::-webkit-scrollbar-track {
+    background: var(--card-bg);
+}
+
+.app *::-webkit-scrollbar {
+    width: 12px;
+    height: 8px;
+}
+
+.app *::-webkit-scrollbar-thumb {
     background-color: var(--inverted-primary-color);
     border-radius: 20px;
-    border: 2px solid var(--primary-color)
+    border: 2px solid var(--primary-color);
 }
